[tool.poetry]
name = "lib-version"
version = "v0.1.5"
description = "A version-aware library that can can be asked for the version of the library."
authors = ["SagaRut <sagakudungur@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lib-version" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
